test/policy/validate/check_memory_requests_same_yaml.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validation-example2
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Deployment
          name: '*'
    name: check-memory_requests_link_in_yaml
    validate:
      pattern:
        spec:
          containers:
          - name: '*'
            resources:
              limits:
                memory: 2048Mi
              requests:
                memory: $(<=/spec/containers/0/resources/limits/memory)
  validationFailureAction: Audit
