test/policy/validate/check_memory_requests_same_yaml_relative.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validation-example2
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Deployment
          name: '*'
    name: check-memory_requests_link_in_yaml_relative
    validate:
      pattern:
        spec:
          containers:
          - (name): '*'
            resources:
              lim(its:
                mem)ory: 2048Mi
              requests:
                memory: $(<=./../../lim(its/mem)ory)
  validationFailureAction: Audit
