test/policy/validate/check_not_root.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-non-root
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Deployment
          - StatefuleSet
          - DaemonSet
    name: check-non-root
    validate:
      message: Root user is not allowed
      pattern:
        spec:
          template:
            spec:
              securityContext:
                runAsNonRoot: true
  validationFailureAction: Audit
