test/policy/validate/check_probe_intervals.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-probe-intervals
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Deployment
    name: check-probe-intervals
    validate:
      message: livenessProbe must be > 10s
      pattern:
        spec:
          template:
            spec:
              containers:
              - livenessProbe:
                  periodSeconds: '>10'
                name: '*'
  - match:
      any:
      - resources:
          kinds:
          - Deployment
    name: check-probe-intervals
    validate:
      message: readinessProbe must be > 10s
      pattern:
        spec:
          template:
            spec:
              containers:
              - name: '*'
                readinessProbe:
                  periodSeconds: '>10'
  validationFailureAction: Audit
