test/policy/validate/policy_validate_default_proc_mount.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-default-proc-mount
spec:
  validationFailureAction: "audit"
  rules:
  - name: validate-default-proc-mount
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Default proc mount should set to Unmasked"
      pattern:
        spec:
          containers:
          - securityContext:
              procMount: Unmasked
# used by rootless containers
